# Fohow

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.env  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
Fohow/: asgi.py  middleware.py  permissions.py  settings.py  urls.py  wsgi.py  yasg.py
docker/nginx/: Dockerfile  default_location  nginx.conf
orders/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
orders/tests/: test_api.py  test_serializers.py
products/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_options_alter_image_options_and_more.py  0002_initial.py  0003_basket.py  0003_rename_context_reviews_text_reviews_rating.py  0004_remove_product_expiration_date_and_more.py
products/tests/: test_api.py  test_serializers.py
tgbot/: apps.py  handlers.py  models.py
tgbot/management/commands/: startbot.py
tgbot/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_is_active.py  0003_user_is_active.py  0004_emailverification.py
users/tests/: test_api.py  test_serializers.py
